# FreeRtosTutorial

./: README.md
UARTDriver/: .mxproject  CMakeLists.txt  Makefile  StartVSCode.bat  UARTDriver.ioc  flashBoard.bat
UARTDriver/Application/inc/: Application.h  RingBuffer.h
UARTDriver/Application/src/: Application.c  RingBuffer.c
UARTDriver/Core/Inc/: main.h  stm32f4xx_it.h
UARTDriver/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
